feat: update r-cran-digest to 0.6.37
GNU R package for 'hash digest' of R data structures

Issue: https://github.com/deepin-community/sig-deepin-sysdev-team/issues/552
Log: update repo

--- a/debian/rules
+++ b/debian/rules
@@ -5,3 +5,7 @@
 
 %:
 	dh $@ --buildsystem R
+
+override_dh_auto_install:
+	dh_auto_install -- prefix=/usr
+	rm debian/r-cran-digest/usr/lib/R/site-library/digest/doc/sha1.html
